# sphinx-bug-20231017

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst
src/mvce/: __init__.py
